Version 1.0

    * Integration into greensuite partner solutions

	* Shipping of default configuration profiles