@@ -1,0 +1,39 @@
+Release Notes
+=============
+
+This document gives information about version numbers and bug fixes/changes and patches.
+Please see also README.txt
+
+
+Version of the partner solution
+===============================
+
+Funambol C++ Client API 6.5.5
+libcurl 7.18.1
+
+
+Version of Qtopia component
+===========================
+
+QPE 4.3.1 or later, no special component requirements
+
+
+Bug fixes/Changes
+=================
+
+see ChangeLog.txt
+
+
+Patches for Qtopia
+==================
+
+No patches needed.
+
+
+Open/known issues
+=================
+
+It is necessary to obtain a commercial license for the Funambol C++ client API to
+integrate the application into a QPE singleexec build due to AGPL license restrictions.
+
+see TODO.txt
