@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE TS><TS version="1.1" language="de_DE">
+<!DOCTYPE TS><TS version="1.1" language="fr">
 <defaultcodec></defaultcodec>
 <context>
     <name>ConfigScreen</name>
     <message>
         <location filename="src/configscreen.cpp" line="24"/>
         <source>New profile</source>
-        <translation>Neues Profil</translation>
+        <translation>Nouveau profil</translation>
     </message>
     <message>
         <location filename="src/configscreen.cpp" line="27"/>
         <source>Enter comment here</source>
-        <translation>Hier Kommentar eingeben</translation>
+        <translation>Entrer un commentaire ici</translation>
     </message>
     <message>
         <location filename="src/configscreen.cpp" line="108"/>
@@ -21,17 +21,17 @@
     <message>
         <location filename="src/configscreen.cpp" line="38"/>
         <source>Contacts</source>
-        <translation>Kontakte</translation>
+        <translation>Contacts</translation>
     </message>
     <message>
         <location filename="src/configscreen.cpp" line="40"/>
         <source>Tasks</source>
-        <translation>Aufgaben</translation>
+        <translation>Tâches</translation>
     </message>
     <message>
         <location filename="src/configscreen.cpp" line="42"/>
         <source>Appointments</source>
-        <translation>Termine</translation>
+        <translation>Calendrier</translation>
     </message>
     <message>
         <location filename="src/configscreen.cpp" line="111"/>
@@ -76,27 +76,27 @@
     <message>
         <location filename="src/configscreen.cpp" line="60"/>
         <source>Name:</source>
-        <translation>Name:</translation>
+        <translation>Nom:</translation>
     </message>
     <message>
         <location filename="src/configscreen.cpp" line="84"/>
         <source>Type:</source>
-        <translation>Typ:</translation>
+        <translation>Type:</translation>
     </message>
     <message>
         <location filename="src/configscreen.cpp" line="70"/>
         <source>Mode:</source>
-        <translation>Modus:</translation>
+        <translation>Mode:</translation>
     </message>
     <message>
         <location filename="src/configscreen.cpp" line="86"/>
         <source>Username:</source>
-        <translation>Benutzername:</translation>
+        <translation>Nom d&apos;utilisateur:</translation>
     </message>
     <message>
         <location filename="src/configscreen.cpp" line="88"/>
         <source>Password:</source>
-        <translation>Passwort:</translation>
+        <translation>Mot de passe:</translation>
     </message>
     <message>
         <location filename="src/configscreen.cpp" line="90"/>
@@ -121,27 +121,27 @@
     <message>
         <location filename="src/configscreen.cpp" line="237"/>
         <source>Error</source>
-        <translation>Fehler</translation>
+        <translation>Erreur</translation>
     </message>
     <message>
         <location filename="src/configscreen.cpp" line="238"/>
         <source>Unable to save profile: %1</source>
-        <translation>Speichern des Profiles nicht möglich: %1</translation>
+        <translation>Enregistration du profil n&apos;est pas possible: %1</translation>
     </message>
     <message>
         <location filename="src/configscreen.cpp" line="28"/>
         <source>Start sync</source>
-        <translation>Starte sync</translation>
+        <translation>Démarre sync</translation>
     </message>
     <message>
         <location filename="src/configscreen.cpp" line="44"/>
         <source>Notes</source>
-        <translation>Notizen</translation>
+        <translation>Notes</translation>
     </message>
     <message>
         <location filename="src/configscreen.cpp" line="96"/>
         <source>Options</source>
-        <translation>Optionen</translation>
+        <translation>Optionnes</translation>
     </message>
 </context>
 <context>
@@ -149,27 +149,27 @@
     <message>
         <location filename="src/syncml/syncclient.cpp" line="177"/>
         <source>Results for </source>
-        <translation>Ergebnisse für </translation>
+        <translation>Résultats pour </translation>
     </message>
     <message>
         <location filename="src/syncml/syncclient.cpp" line="178"/>
         <source>  client   server
 </source>
-        <translation>  client   server
+        <translation>  client   serveur
 </translation>
     </message>
     <message>
         <location filename="src/syncml/syncclient.cpp" line="180"/>
         <source> new
 </source>
-        <translation> neu
+        <translation>  nouveau
 </translation>
     </message>
     <message>
         <location filename="src/syncml/syncclient.cpp" line="182"/>
         <source> modified
 </source>
-        <translation> modifiziert
+        <translation> modifié
 </translation>
     </message>
     <message>
@@ -177,7 +177,7 @@
         <source> deleted
 
 </source>
-        <translation> gelöscht
+        <translation> supprimée
 
 </translation>
     </message>
@@ -192,12 +192,12 @@
     <message>
         <location filename="src/synczilla.cpp" line="237"/>
         <source>Back</source>
-        <translation>Zurück</translation>
+        <translation>Retour</translation>
     </message>
     <message>
         <location filename="src/synczilla.cpp" line="106"/>
         <source>Loading profile &quot;%1&quot;: </source>
-        <translation>Lade Profil &quot;%1&quot;: </translation>
+        <translation>Charger le profil &quot;%1&quot;: </translation>
     </message>
     <message>
         <location filename="src/synczilla.cpp" line="108"/>
@@ -209,7 +209,7 @@
     <message>
         <location filename="src/synczilla.cpp" line="109"/>
         <source>Sync with server: </source>
-        <translation>Synchronisiere mit Server: </translation>
+        <translation>Sync avec le serveur: </translation>
     </message>
     <message>
         <location filename="src/synczilla.cpp" line="120"/>
@@ -224,25 +224,25 @@
         <location filename="src/synczilla.cpp" line="114"/>
         <source>Failed
 </source>
-        <translation>Fehlgeschlagen
+        <translation>Manquée
 </translation>
     </message>
     <message>
         <location filename="src/synczilla.cpp" line="144"/>
         <source>Error</source>
-        <translation>Fehler</translation>
+        <translation>Erreur</translation>
     </message>
     <message>
         <location filename="src/synczilla.cpp" line="145"/>
         <source>Unable to edit profile: %1</source>
-        <translation>Editieren des Profils nicht möglich: %1</translation>
+        <translation>Èditer le profil n&apos;est pas possible: %1</translation>
     </message>
     <message>
         <location filename="src/synczilla.cpp" line="123"/>
         <source>Failed
 
 </source>
-        <translation>Fehlgeschlagen
+        <translation>Manquée
 
 </translation>
     </message>
@@ -260,7 +260,7 @@ Bitte schauen Sie in ihren Einstellungen nach Fehlern
     <message>
         <location filename="src/synczilla.cpp" line="52"/>
         <source>Syncing ...</source>
-        <translation>Synchronisiere ...</translation>
+        <translation>Synchronisée ...</translation>
     </message>
     <message>
         <location filename="src/synczilla.cpp" line="125"/>
@@ -270,7 +270,7 @@ Please check your configuration
 </source>
         <translation>
 
-Bitte überprüfen Sie ihre Konfiguration
+Réviser vôtre configuration s&apos;il vouz plaît
 </translation>
     </message>
 </context>
