@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE TS><TS version="1.1" language="de_DE">
+<!DOCTYPE TS><TS version="1.1" language="fr">
 <context>
     <name>SyncZilla</name>
     <message>
-        <location filename="tr24745.cpp" line="1"/>
+        <location filename="tr17820.cpp" line="1"/>
         <source>SyncZilla</source>
         <comment>Use soft hyphen (char U00AD) to indicate hyphenation</comment>
         <translation>SyncZilla</translation>
     </message>
     <message>
-        <location filename="tr24745.cpp" line="2"/>
+        <location filename="tr17820.cpp" line="2"/>
         <source>A PIM synchronization tool</source>
-        <translation>Ein PIM Synchronizationswerkzeug</translation>
+        <translation>Outil de la synchronisation PIM</translation>
     </message>
 </context>
 </TS>
+
