@@ -2,4 +2,13 @@ Version 1.0
 
     * Integration into greensuite partner solutions
 
-	* Shipping of default configuration profiles
+    * Shipping of default configuration profiles
+
+    * Fully transparent integration into Qtopia build systen
+
+    * Resolved some issues relating to qpk packaging (libs are stripped
+      automatically before 'make packages' is run)
+
+    * German translation added
+
+    * French translation added
